# msstud_trainer

./: .gitignore  LICENSE  MSHC_TwoPhase_Scout_Play.xlsx  README.md  ap5_mississippi_stud_strategy_analysis.xlsx  b_ap3_mississippi_stud_strategy_analysis.xlsx  b_basic_mississippi_stud_strategy_analysis.xlsx  m_stud_full_analysis.xlsx  pyproject.toml  requirements.txt  setup.py
analysis/: bankroll_math.py
core/: hand_features.py  sim_unused.py  simulation.py  simulation_old.py
core/strategies/: ap3.py  ap5.py  basic.py
data/: create_strategy_tables.py
notebooks/: simulator_notebook.ipynb  simulator_notebook.py
strategy_analysis_tables/: 10k_strategy_list_mississippi_stud_strategy_analysis.xlsx  ap3_mississippi_stud_strategy_analysis.xlsx  b_ap5_mississippi_stud_strategy_analysis.xlsx
tests/: test_ap3.py  test_ap3_old.py  test_basic_strategy.py  test_hand_features.py
training/: cli_ap_3rd.py  cli_ap_5th.py  cli_basic_old.py  ms_stud_trainer_streamlit.py  ms_stud_trainer_streamlit_multi.py  ms_stud_trainer_streamlit_multi_changed.py  ms_stud_trainer_streamlit_old.py
training/archived/: ms_stud_trainer_streamlit.py
