
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msstud_trainer"
version = "0.1.0"
description = "Training and simulation suite for Mississippi Stud using card_lib"
authors = [
    { name = "ProductionStructure" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "card_lib @ git+https://github.com/NolanCSE/card_lib.git"
]

[project.scripts]
msstud-train-basic = "training.cli_basic:main"
msstud-train-ap3 = "training.cli_ap_3rd:main"
msstud-train-ap5 = "training.cli_ap_5th:main"
